# WASM-Boilerplate

./: .gitignore  CMakeLists.txt  README.md  cpp-build.sh  cpp-install-emsdk.sh  cpp-postinstall.sh  cpp-preinstall.sh  index-bundle.html  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
cpp/: CMakeLists.txt
cpp/cppLib/: CMakeLists.txt  main.idl
cpp/main/: CMakeLists.txt  main.cpp  main.hpp
ts/: MyApp.ts
