
# Ref:  https://github.com/lukka/CppOpenGLWebAssemblyCMake
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(cpp)

# "Pure" C++17 and no extensions.
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_INSTALL_PREFIX "..")

IF(EMSCRIPTEN)
    ADD_DEFINITIONS(-DEMSCRIPTEN)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1 -s NO_FILESYSTEM=1 -s INVOKE_RUN=0 -s ENVIRONMENT=web")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s MODULARIZE=1 -s EXPORT_NAME='${CMAKE_PROJECT_NAME}'")
ENDIF()

ADD_SUBDIRECTORY(cppLib)

